[level 0] Title: 배열 만들기 4, Time: 21.09 ms, Memory: 98.1 MB -BaekjoonHub